--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,15 @@ name = "fibomatrix"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
+rayon = "1.10.0"
+
 [dependencies.rug]
 version = "1.24.1"
 default-features = false
 features = ["integer"]
+
+[profile.release]
+# lto = true
+# opt-level = 3
